v4-choose-vpc-and-subnet.yml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  Launch an t2.micro instance in a default public subnet.

  - Explicitly pick and choose a subnet you want to lunch your instance in (VpcId, SubnetId) 
  - Create a new security group (InstanceSecurityGroup) for instance and add
    rules based on SSHSourceIpRange parameter
  - Validate the format of SSHSourceIpRange
Parameters:
  InstanceType:
    Type: String
    Description: Instance Type
    Default: t3.nano
    AllowedValues:
      - t3.nano
      - t3.micro
      - t3.small
  AMIid:
    Description: Find the latest AMI ID using System Manager Parameter Store
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2
  SSHKeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: An existing SSH key from your account
    Default: default
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: Launch new instance in this VPC
  SubnetId:
    Type: AWS::EC2::Subnet::Id
    Description: Launch new instance in this subnet (has to be in the VPC you've choosed above)
  SSHSourceIpRange:
    Description: The IP address range that can be used to SSH to the EC2 instances
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 0.0.0.0/0
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
Resources:
  InstanceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref VpcId
      GroupDescription: Enable SSH access via port 22 and HTTP via port 80
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: !Ref SSHSourceIpRange
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
  WebServerInstance:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: !Ref InstanceType
      ImageId: !Ref AMIid
      KeyName: !Ref SSHKeyName
      SecurityGroupIds: 
        - !Ref InstanceSecurityGroup
      SubnetId: !Ref SubnetId
      Tags:
        - Key: StackId
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: Very simple CFN web server - modified by update!
        - Key: Env
          Value: Demo
      UserData: 
        Fn::Base64: |
          #!/bin/bash -xe
          # Setting up apache web server
          yum install -y httpd.x86_64
          systemctl start httpd.service
          systemctl enable httpd.service
          # Simple static webpage using metadata
          TOKEN=$(curl -X PUT "http://169.254.169.254/latest/api/token" -H "X-aws-ec2-metadata-token-ttl-seconds: 21600")
          HOSTNAME=$(curl -H "X-aws-ec2-metadata-token: $TOKEN" -s http://169.254.169.254/latest/meta-data/public-hostname)
          AZ=$(curl -H "X-aws-ec2-metadata-token: $TOKEN" -s http://169.254.169.254/latest/meta-data/placement/availability-zone)
          echo "v4 - Made by Cloudformation: $HOSTNAME located in $AZ" > /var/www/html/index.html
Outputs:
  URL:
    Value: !Sub |
     http://${WebServerInstance.PublicIp}
    Description: Newly created application URL
